css/workitem.css
/* ... */
.view-sandbox .smbutton {
    border: none !important;
    left: 0px !important;
    top: -1px;
}

#bid-panel {
    margin-bottom: 40px;
}

#fee-accordion #fee-panel {
    margin: 0;
    width: 400px;
}

#fee-panel.ui-accordion-content {
    margin-top: 5px;
    padding: 0px;
    background-color: #FFFFDD;
}

#fee-panel.ui-widget-content {
    background-image:none;
}

#fee_desc,
#tip_desc {
    width:280px;
}

#edit_workitem_form ul li {
    float:left;
    list-style: none!important;
}

#edit_workitem_form textarea {
    width:200px;
}

#open_bid_dialog ul li {
    float:left;
    list-style: none!important;
}

.workitem-back {
    font-weight: bold;
    height:26px;
    line-height:26px;
}

#edit-notes {
    height: 164px;
    min-height: 100px;
    width: 410px;
}

.table-bids .table-hdng td:first-child{
    width: 132px;
}

.table-bids .table-hdng td:last-child{
    width: 127px;
    padding-right: 0;
}

.table-bids tbody td:last-child{
    padding-right: 0;
}

.table-hdng{
    background-image:none;
    background-color:#eee;
}

.table-hdng:hover{
    background-image:none;
    background-color:#ddd;
}

.moneyZone .table-hdng{
    background: none !important;
}

.moneyZone .table-hdng td{
    padding-right: 1px;
    margin: 0;
}

.moneyZone .table-hdng td.what .table-back {
    text-align: center;
}

.moneyZone .table-hdng td .table-back {
    font-size: 14px;
    font-weight: normal;
    border-top: 2px solid #CCC; border-bottom: 2px solid #999;
    margin: 0;
    width: 100%;
    float: left;
    padding: 3px 0;
    height: 15px;
}

.moneyZone .table-hdng td .table-back span{
    padding: 0 9px;
}

.moneyZone .table-hdng td.what .table-back span{
    padding: 0 4px;
}

.moneyZone .table-hdng:hover{
    background-image:none;
    background-color:#ddd;
}

.roweven{
    background-image:none;
    background-color:#f5f5f5;

}
* :focus {
    outline: 0;
}

.popup-body, #confirmation {
    display: none;
}

.popup-body {
    padding: 8px;
    text-align: left;
}

.popup-body input[type="text"], .popup-body textarea, .popup-body select {
    font-size: 14px;
    font-family: helvetica, arial, sans-serif;
    width: 370px;
}

#popup-bid .notes,
#popup-edit-bid-info .notes {
    height: 120px;
    width: 403px;
}

#popup-bid #mechanic_id {
    width: 420px;
}

#popup-bid #bid,
#popup-edit-bid-info #edit_bid {
    float: right;
    position: relative;
    margin-top: 10px;
}   

#popup-edit textarea {
    height: 110px;
}

.popup-body input.date {
    width: 130px;
}

.popup-body input.money {
    width: 50px;
}

.popup-body p {
    margin: 0 0 2px;
}

.popup-body .popup-delete-summary {
    padding: 4px;
}

.gravatar {
    float:left;
    height:32px;
    margin-bottom:10px;
    margin-right:5px;
    width:32px;
}

.commentZone ul {
    list-style:none!important;
    padding:0px!important;
    margin:0px 0px 0px 10px!important;
}

.commentZone li {
    list-style:none!important;
    padding: 0 !important;
    margin-bottom: 21px;
    width: auto !important;
}

.commentZone li.imOdd {
}

.commentZone li.imEven {
}

.comment-container {
    float: right;
    position: relative;
    top: -2px;
    left: -1px;
}

.comment-info {
    margin-bottom:3px;
    float:left;
    width: 100%;
}

.comment-text {
    margin-bottom: 4px;
    float: left;
    font-size: 14px;
    line-height: 18px;
    width: 100%;
}

.comment {
    font-size:13px;
    overflow:auto;
    margin-top: 12px;
}

.author {
    display:inline;
    font-size:14px;
}

.date {
    font-size:12px;
    color:#666;
}

.picture {
    float: left;
    height: 50px;
    margin-top: 1px;
    width: 50px;
}

.reply-lnk {
    font-size: 12px;
    width:100%;
    margin-top:0;
    text-align: left;
    float: left;
    text-decoration: underline;
}


.depth-0 .comment-container {
    width: 424px;
}

.depth-1 {
    margin-left: 65px;
}

.depth-1 .comment-container {
    width: 359px;
}

.depth-2 {
    margin-left: 130px;
}

.depth-2 .comment-container {
    width: 294px;
}

.depth-3 {
    margin-left: 195px;
}

.depth-3 .comment-container {
    width: 229px;
}

.depth-4 {
    margin-left: 260px;
}

.depth-4 .comment-container {
    width: 164px;
}

.depth-5 {
    margin-left: 335px;
}

.depth-5 .comment-container {
    width: 99px;
}

.depth-6 {
    margin-left: 400px;
}

.depth-6 .comment-container {
    width: 34px;
}


.desc {
    margin-top:0px !important;
    margin-bottom:2px !important;
}

.commentform{
    margin-bottom:25px;
}

.commentform .button-container {
    background: #EFEFEF;
    border: 1px solid #D6D6D6;
    padding: 12px;
    margin-top: -4px;
    width: 425px;
    height: 21px;
}

.commentform .button-container .smbutton {
    border: none !important;
}

.commentform .button-container .buttonContainer {
    padding-left: 6px;
    float: left;
    margin: 12px 0;
}

.commentform textarea {
    clear:right;
    margin: 0;
    padding: 12px;
    border: 1px solid #D6D6D6;
    font-size: 13px;
    width: 425px !important;
    height: 52px;
    font-family: Arial, Helvetica, sans-serif;
}

.commentform, .comments {
    border-bottom:none!important;
}

<!-- [if IE]
#right-panel .moneyZone{
    display:block;
    width:390px!important;
    -moz-border-radius: 6px;
    -webkit-border-radius: 6px;
    border-radius: 6px;
    border:2px #DCD998 solid;
    padding:0px 8px 19px 8px;
    background-color: #FFFFDD;
}

#left-panel ul{
    list-style:none!important;
    width: 100%;
    margin:0!important;
    padding:0!important;
    float: left;
    border-top: 1px solid #d6d6d6;
    min-height: 50px;
}

#left-panel ul #no_comments{
    margin: 20px !important;

}

#right-panel{
    width: 352px!important;
    float: right;
}

.info-data input[type=text]{
    width:290px;
    margin-bottom:8px;
}

.info-invite input[type=text]{
    margin-top:8px!important;
    width:240px;
}

.commentZone{
    width: 100%;
    margin-top: 40px;
    font-size: 12px;
    float: left;
}
/* ... */

